# pricepoints

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  CLAUDE.md  LICENSE  README.md  air.toml  pyproject.toml  pyrightconfig.json
.claude/: settings.json
.claude/agents/: data-scientist.md  python-pro.md  writing-partner.md
.claude/skills/trino/: SKILL.md
.claude/skills/trino/reference/: claims.md  clear-rates.md  hospital.md  payer.md  spines.md
.claude/skills/trino/references/: claims.md  clear-rates.md  hospital.md  payer.md  spines.md
.github/workflow/: python-build-and-test.yaml
.github/workflows/: air.yaml  pre-commit.yaml  prek.yaml  python-build-and-test.yaml
analyses/2025_05_cld_coverage/: README.md  ingest.py  pyproject.toml
analyses/2025_05_cld_coverage/data/: codes.csv
analyses/2025_05_cld_coverage/data/input/: codes.csv
analyses/2025_05_cld_coverage/queries/: code_counts.sql  payer_provider_counts.sql  revenue.sql
projects/: README.md
projects/0000_00_proj_template/: README.md  example.qmd  pyproject.toml
projects/2025_04_delivery_costs/: 2025_04_delivery_costs.Rproj  README.md  analysis.py  analysis.qmd  ingest.py  pyproject.toml
projects/2025_04_delivery_costs/queries/: payer_stats.sql  providers.sql  rates.sql
projects/2025_04_delivery_costs/scripts/: 00-ingest.py  00_ingest.py  01_clean.py  02_analysis.py
projects/2025_05_bsc_hoag/: README.md  analysis.qmd  example.py  ingest.py  pyproject.toml
projects/2025_05_bsc_hoag/queries/: claim_counts.sql  payer_share.sql  rates.sql
projects/2025_05_bsca_hoag/: 2025_05_bsca_hoag.Rproj  README.md  analysis.qmd  ingest.py  pyproject.toml
projects/2025_05_bsca_hoag/queries/: claim_counts.sql  payer_share.sql  rates.sql
projects/2025_05_rural_v_urban/: 2025_05_rural_v_urban.Rproj  README.md  analysis.qmd  ingest.py  pyproject.toml
projects/2025_05_rural_v_urban/data/input/: NCHSurb-rural-codes.csv  county_crosswalk.csv  missing_county_lookup.csv
projects/2025_05_rural_v_urban/queries/: all_rates.sql  code_utilization.sql  rates.sql  rates_code.sql
projects/2025_05_urban_v_rural/: 2025_05_urban_v_rural.Rproj  ingest.py  map.R  pyproject.toml
projects/2025_05_urban_v_rural/queries/: providers.sql
projects/2025_06_il_340b/: 2025_06_il_340b.Rproj  README.md  analysis.qmd  geocode.py  ingest.py  pyproject.toml
projects/2025_06_il_340b/data/input/: kff_obbb.csv  tq_ahq_crosswalk.csv
projects/2025_06_il_340b/data/output/: state_legislation.csv
projects/2025_06_il_340b/queries/: drug_rates.sql  il_hospitals.sql  medicare_cost_reports.sql  obbb.sql  price_example.sql
projects/2025_07_blues/: 2025_07_blues.Rproj  README.md  analysis.qmd  ingest.py  pyproject.toml
projects/2025_07_blues/data/: blues.csv
projects/2025_07_blues/images/: banner.psd  burns.psd  flow_chart.psd  stop_loss.psd
projects/2025_07_blues/queries/: blue_providers.sql  blue_rates.sql  employers.sql  rate_diff_example.sql  stoploss.sql
projects/2025_10_employer_networks/: README.md  example.py  pyproject.toml  self_v_fully_funded.sql
projects/2025_10_employer_networks/queries/: self_v_fully_funded.sql  temp.sql
projects/2025_11_cpw/: README.md  analysis.qmd  fetch_npis.py  ingest.py  ingest_inst.py  ingest_pro.py  pyproject.toml
projects/2025_11_cpw/data/input/: CostPlusWellness.com_C010_20251104_BaylorScottWhiteHealth_Facility.csv  CostPlusWellness.com_C010_20251104_BaylorScottWhiteHealth_PhysicianGroup.csv  CostPlusWellness.com_C010_RateSheet_BSWH_Institutional.csv  CostPlusWellness.com_C010_RateSheet_BSWH_Professional.xlsx  cpw_specialties.csv
projects/2025_11_cpw/data/output/: cpw_provider_npis.csv  dfw_provider_counts.parquet
projects/2025_11_cpw/queries/: bswh_inst_rates.sql  bswh_pro_rates.sql  dfw_provider_counts.sql
projects/2025_12_prop_tax/: .gitignore  README.md  analysis.qmd  ingest.py  pyproject.toml  tax_sim.R
projects/2025_12_prop_tax/data/input/: hospital_acquisitions.csv  macneal_pins_possible.csv
projects/2025_12_prop_tax/queries/: hospital_info.sql
projects/2026_02_v2_tic/: README.md  analysis.qmd  ingest.py  ingest_raw.py  pyproject.toml
projects/2026_02_v2_tic/queries/: ein_fill_rate_feb.sql  ein_names_agg_feb.sql  ein_names_feb.sql  ein_names_sample_feb.sql  file_sizes_feb.sql  network_names_feb.sql  network_names_sample.sql  payer_files_dec.sql  payer_files_feb.sql  provider_mode_dec.sql  provider_mode_feb.sql
projects/proj-template/: example.py  pyproject.toml
tq/: README.md  __init__.py  connectors.py  pyproject.toml
tq/src/tq/: __init__.py  connectors.py  utils.py
tq/tests/: test_utils.py
