[project]
name = "research"
version = "0.0.1"

# Linting and type checking tools. These get inherited by subdirectories
# using extend directives in their respective pyproject.toml files
[tool.pyright]
# Let ruff handle these
reportUnusedImport = false
reportUndefinedVariable = false

[tool.ruff]
line-length = 79

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
