[project]
name = "pricepoints"
version = "0.0.0"

# Linting and type checking tools. These get inherited by subdirectories
# using extend directives in their respective pyproject.toml files
[tool.ruff]
line-length = 79

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ty.rules]
unresolved-import = "ignore"
unresolved-attribute = "ignore"

[tool.sqlfluff.core]
dialect = "trino"
exclude_rules = "ambiguous.column_count, structure.column_order, RF04, ST05"
large_file_skip_byte_limit = 0
processes = -1

[tool.sqlfluff.indentation]
indent_unit = "space"
tab_space_size = 4
indented_joins = false
indented_using_on = true
indented_on_contents = false
indented_ctes = false
indented_then = true
indented_then_contents = false
allow_implicit_indents = true

[tool.sqlfluff.rules.aliasing.table]
aliasing = "explicit"
[tool.sqlfluff.rules.aliasing.column]
aliasing = "explicit"
[tool.sqlfluff.rules.aliasing.length]
min_alias_length = 2

[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = "upper"
[tool.sqlfluff.rules.capitalisation.identifiers]
capitalisation_policy = "upper"
[tool.sqlfluff.rules.capitalisation.functions]
extended_capitalisation_policy = "upper"
[tool.sqlfluff.rules.capitalisation.literals]
capitalisation_policy = "upper"
[tool.sqlfluff.rules.capitalisation.types]
extended_capitalisation_policy = "upper"

[tool.sqlfluff.rules.convention.casting_style]
preferred_type_casting_style = "cast"
