[project]
name = "tq"
version = "0.0.1"
description = "Helper package for Turquoise Health research"
keywords = [
  "healthcare",
  "data science",
  "data analysis",
  "healthcare pricing"
]
authors = [
  {name = "Dan Snow", email = "dan.snow@turquoise.health"}
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "python-dotenv>=1.1.0",
  "setuptools>=61.0",
  "trino>=0.333.0"
]

[project.urls]
repository = "https://github.com/turquoisehealth/research/tq"

[project.optional-dependencies]
dev = [
  "pre-commit>=4.0.1",
  "pytest>=7.3.0",
  "pytest-cov>=4.1.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.parquet"]

# CI and test tools
[tool.pytest.ini_options]
minversion = "7.0.0"
addopts = "-v --cache-clear -rf --cov=tq --cov-report=term --cov-report=html --maxfail=10"
console_output_style = "count"
python_classes = "Test"
python_files = "test_*.py"
python_functions = "test_*"
testpaths = "tq/tests"

[tool.tox]
legacy_tox_ini = """
[tox]
min_version = 4.0
envlist =
    py{310, 311, 312, 313}

[gh-actions]
python =
    3.10: py310
    3.11: py311
    3.12: py312
    3.13: py313

[testenv]
extras = dev
commands = pytest
passenv =
    UV_CACHE_DIR
    PYTHONUNBUFFERED

[testenv:py{310, 311, 312, 313}]
uv_resolution = highest
"""

# Linting and type checking tools
[tool.mypy]
disable_error_code = ["import-not-found", "import-untyped"]
python_version = "3.12.8"

[tool.pyright]
# Let ruff handle these
reportUnusedImport = false
reportUndefinedVariable = false

[tool.ruff]
line-length = 79

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
