[project]
name = "0000_00_proj_template"
version = "0.0.1"
description = "Project template"
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.12",
]
requires-python = "==3.12.8"
dependencies = [
  "ipykernel>=6.29.0",
  "pandas>=2.2.3",
  "pandas-stubs>=2.2.3",
  "tq @ file:///${PROJECT_ROOT}/../../tq"
]

[project.optional-dependencies]
dev = [
  "pre-commit>=4.0.1",
  "ruff>=0.11.0",
  "sqlfluff>=2.3.5"
]

# Linting and type checking tool configs inherited from the root pyproject.toml
[tool.pyright]
extends = "../../pyproject.toml"

[tool.ruff]
extend = "../../pyproject.toml"
