[project]
name = "2025_05_bsca_hoag"
version = "0.0.1"
description = "Orange County’s Big Healthcare Brawl"
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.12",
]
requires-python = "==3.12.8"
dependencies = [
  "ipykernel>=6.29.0",
  "pandas>=2.2.3",
  "pandas-stubs>=2.2.3",
  "polars>=1.29.0",
  "pyarrow>=19.0.1",
  "tq @ file:///${PROJECT_ROOT}/../../tq",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=4.0.1",
  "ruff>=0.11.0",
  "sqlfluff>=2.3.5"
]

# Linting and type checking tool configs inherited from the root pyproject.toml
[tool.pyright]
extends = "../../pyproject.toml"

[tool.ruff]
extend = "../../pyproject.toml"

[tool.setuptools.packages.find]
include = ["src*"]
