[project]
name = "2025_06_il_340b"
version = "0.0.1"
description = "Illinois 340B"
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.12",
]
requires-python = "==3.12.8"
dependencies = [
  "fastexcel>=0.14.0",
  "geopy>=2.4.1",
  "polars>=1.8.0",
  "pyarrow>=19.0.1",
  "tq @ file:///${PROJECT_ROOT}/../../tq",
]

[project.optional-dependencies]
dev = [
  "ipykernel>=6.29.5",
  "pandas>=2.3.0",
  "pre-commit>=4.0.1",
  "ruff>=0.11.0",
  "sqlfluff>=2.3.5"
]

# Linting and type checking tool configs inherited from the root pyproject.toml
[tool.pyright]
extends = "../../pyproject.toml"

[tool.ruff]
extend = "../../pyproject.toml"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.sqlfluff.templater.jinja.context]
ccn_values = ""
